Replace WebClient builder with FeignClient
- Improved maintainability
- Simplified application structure